--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/node": "^22.7.6",
     "@types/react": "^18.3.11",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "init": "^0.1.2",
     "npx": "^10.2.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.8"
   },
   "dependencies": {
@@ -24,13 +30,17 @@
     "@tanstack/react-query": "^5.59.14",
     "@tanstack/react-query-devtools": "^5.59.14",
     "@vitejs/plugin-react": "^4.3.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-list": "^2.3.0",
     "lucide-react": "^0.453.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   }
