--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.59.14",
     "@tanstack/react-query-devtools": "^5.59.14",
     "@vitejs/plugin-react": "^4.3.2",
+    "awesome-typescript-loader": "^5.2.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,6 +42,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.5.0",
+    "source-map-loader": "^5.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   }
